Refactor entire page with consistent layout system
- Create standard section pattern with consistent padding and structure
- Center all section titles (brand blue #1E4FA8) above content
- Center intro paragraphs with max-width 720px
- Implement two-column grid system for sections with images
- Fix Why Better Photos Matter: image left, content right, stacked benefits
- Update How It Works: three-column centered layout
- Update How We Upgrade: text left, image right
- Update Real Transformations: centered rows with captions
- Update ROI: image left, text right, centered highlight box
- Update Pricing: remove future vision line
- Update Ready To See Difference: text left, image right, centered highlight box
- Refactor highlight box: remove icons, fit-content width, centered, new styling
- Ensure consistent vertical spacing (64px)
- Left-align all text in columns except titles/intros
- Fully responsive with mobile stacking

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/br-logo-final cropped.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/br-logo-final cropped.png">
     <link rel="apple-touch-icon" href="images/br-logo-final cropped.png">
-    <link rel="stylesheet" href="styles.css?v=10">
+    <link rel="stylesheet" href="styles.css?v=11">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -30,14 +30,14 @@
     <!-- Hero Section -->
     <section class="hero section">
         <div class="container">
-            <div class="hero-wrapper">
-                <div class="hero-content">
+            <div class="section-grid">
+                <div class="section-content">
                     <h1>Upgrade Your Listing. Increase Your Bookings.</h1>
                     <p class="hero-text">Most holiday rentals underperform because their photos do not create enough trust or desire. We professionally enhance your existing images so your property looks bright, clean, inviting, and high quality without needing new photography.</p>
                     <a href="#upload" class="cta-button">Get a Free Sample Upgrade</a>
                     <p class="hero-reassurance">Show us one photo and we will upgrade it for free so you can see the difference before committing.</p>
                 </div>
-                <div class="hero-image">
+                <div class="section-image">
                     <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit Mascot" class="hero-mascot-desktop">
                     <img src="images/br-rabbit-mobile.png" alt="Blue Rabbit Mascot" class="hero-mascot-mobile">
                 </div>
@@ -48,7 +48,7 @@
     <!-- Who We Help Section -->
     <section id="who-we-help" class="section">
         <div class="container">
-            <h2 class="section-heading">Who We Help</h2>
+            <h2 class="section-title">Who We Help</h2>
             <div class="cards-grid">
                 <div class="card">
                     <h3>Airbnb Hosts</h3>
@@ -69,12 +69,12 @@
     <!-- Why Better Photos Matter Section -->
     <section id="why-photos-matter" class="section">
         <div class="container">
-            <div class="two-column reverse">
-                <div class="column-image">
+            <h2 class="section-title">Why Better Photos Matter</h2>
+            <div class="section-grid">
+                <div class="section-image">
                     <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image">
                 </div>
-                <div class="column-content">
-                    <h2 class="section-heading">Why Better Photos Matter</h2>
+                <div class="section-content">
                     <div class="content-block">
                         <h3>Visibility</h3>
                         <p>Listings with bright, high quality images attract more clicks because they stand out instantly in crowded search results.</p>
@@ -88,11 +88,8 @@
                         <p>Better photos convert more browsers into guests. Small visual improvements can increase booking rates by 20 to 40 percent.</p>
                     </div>
                     <h3 class="subheading">What Poor Photos Cost You</h3>
-                    <p class="final-paragraph">Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
-                    <div class="highlight-card">
-                        <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                    <p>Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
+                    <div class="highlight-box">
                         <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
                     </div>
                 </div>
@@ -103,7 +100,7 @@
     <!-- How It Works Section -->
     <section id="how-it-works" class="section">
         <div class="container">
-            <h2 class="section-heading">How It Works</h2>
+            <h2 class="section-title">How It Works</h2>
             <p class="section-intro">How our simple process helps you upgrade your listing quickly.</p>
             <div class="steps-grid">
                 <div class="step">
@@ -122,10 +119,7 @@
                     <p>Replace your listing photos with the upgraded versions and watch performance improve.</p>
                 </div>
             </div>
-            <div class="highlight-card">
-                <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+            <div class="highlight-box">
                 <p>Updating your photos can start increasing performance the same week.</p>
             </div>
         </div>
@@ -134,14 +128,14 @@
     <!-- How We Upgrade Your Photos Section -->
     <section id="what-we-do" class="section">
         <div class="container">
-            <div class="two-column">
-                <div class="column-content">
-                    <h2 class="section-heading">How We Upgrade Your Photos</h2>
+            <h2 class="section-title">How We Upgrade Your Photos</h2>
+            <div class="section-grid">
+                <div class="section-content">
                     <p>Most holiday rental photos suffer from flat lighting, colour imbalance, shadows, dull skies, and distracting elements that make rooms feel smaller or dated. Our process corrects all of these issues with precise lighting adjustments, colour balancing, window light correction, and careful removal of anything that pulls attention away from the space.</p>
                     <p>We then enhance detail, clarity, and depth to create images that feel brighter, warmer, larger, and more inviting, without altering the reality of your property. This is not a simple filter. It is a multi step professional enhancement workflow designed to make every room look its best and help your listing perform at its highest potential.</p>
-                    <p class="optional-line">Used consistently across your listing, this creates a cleaner, premium brand that guests trust.</p>
+                    <p>Used consistently across your listing, this creates a cleaner, premium brand that guests trust.</p>
                 </div>
-                <div class="column-image">
+                <div class="section-image">
                     <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image">
                 </div>
             </div>
@@ -151,7 +145,7 @@
     <!-- Real Transformations Section -->
     <section id="results" class="section">
         <div class="container">
-            <h2 class="section-heading">Real Transformations</h2>
+            <h2 class="section-title">Real Transformations</h2>
             <p class="section-intro">Guests make booking decisions in seconds. These real examples show how much difference professional photo enhancement can make: brighter rooms, clearer details, and a cleaner, more inviting atmosphere that improves first impressions.</p>
             <div class="transformations-list">
                 <div class="transformation-item">
@@ -179,10 +173,7 @@
                     <p class="caption">Clutter and harsh shadows reduced guest confidence. The upgraded version improves clarity, softens lighting, and creates a more premium presentation.</p>
                 </div>
             </div>
-            <div class="highlight-card">
-                <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+            <div class="highlight-box">
                 <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
             </div>
         </div>
@@ -191,17 +182,15 @@
     <!-- Your ROI Section -->
     <section id="roi" class="section">
         <div class="container">
-            <div class="two-column reverse">
-                <div class="column-image">
+            <h2 class="section-title">Your ROI</h2>
+            <div class="section-grid">
+                <div class="section-image">
                     <img src="images/br-rabbit-money.png" alt="Blue Rabbit Money" class="mascot-image">
                 </div>
-                <div class="column-content">
-                    <h2 class="section-heading">Your ROI</h2>
-                    <p>Professional images are not an expense. They are an asset. Better photos increase your visibility, raise your nightly rate, and help convert more browsers into confirmed bookings. If your nightly rate is around £120, even one extra weekend booked per month can more than cover the full cost of the Standard Package. The Premium Package often pays for itself even faster, especially for larger properties or high demand locations. Clear, bright, high quality images make your property feel more inviting and immediately more valuable. This is often the easiest and fastest way to increase annual income without renovating or lowering your prices.</p>
-                    <div class="highlight-card">
-                        <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                <div class="section-content">
+                    <p>Professional images are not an expense. They are an asset. Better photos increase your visibility, raise your nightly rate, and help convert more browsers into confirmed bookings. If your nightly rate is around £120, even one extra weekend booked per month can more than cover the full cost of the Standard Package. The Premium Package often pays for itself even faster, especially for larger properties or high demand locations.</p>
+                    <p>Clear, bright, high quality images make your property feel more inviting and immediately more valuable. This is often the easiest and fastest way to increase annual income without renovating or lowering your prices.</p>
+                    <div class="highlight-box">
                         <p>One or two extra bookings a month can completely change your annual earnings.</p>
                     </div>
                 </div>
@@ -212,7 +201,7 @@
     <!-- Simple Transparent Pricing Section -->
     <section id="pricing" class="section">
         <div class="container">
-            <h2 class="section-heading">Simple, Transparent Pricing</h2>
+            <h2 class="section-title">Simple, Transparent Pricing</h2>
             <p class="section-intro">Most hosts recover the full cost with one or two additional nights booked. Better photos lead to higher occupancy, more clicks, and stronger guest confidence, making this one of the most cost effective upgrades available.</p>
             <div class="pricing-grid">
                 <div class="pricing-card">
@@ -250,20 +239,17 @@
     <!-- Ready to See the Difference Section -->
     <section id="upload" class="section cta-section">
         <div class="container">
-            <div class="two-column">
-                <div class="column-content">
-                    <h2 class="section-heading">Ready to See the Difference?</h2>
+            <h2 class="section-title">Ready to See the Difference?</h2>
+            <div class="section-grid">
+                <div class="section-content">
                     <p>Better photos lead to more clicks, more bookings, and higher income, often within days of refreshing your listing. Many hosts see stronger occupancy and more reliable revenue simply by upgrading the images they already have. Your property may be performing well now, but with professional photo enhancement it can perform even better.</p>
                     <p>Send us one photo and we will upgrade it completely free so you can see the difference for yourself before committing.</p>
                     <a href="#upload" class="cta-button">Get a Free Sample Upgrade</a>
-                    <div class="highlight-card">
-                        <svg class="spark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10 2L12.09 7.26L18 8.27L14 12.14L14.91 18.02L10 15.77L5.09 18.02L6 12.14L2 8.27L7.91 7.26L10 2Z" stroke="#1E4FA8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                    <div class="highlight-box">
                         <p>Your next guest could choose your listing tomorrow once they see your improved photos.</p>
                     </div>
                 </div>
-                <div class="column-image">
+                <div class="section-image">
                     <img src="images/br-rabbit-holiday.png" alt="Blue Rabbit Holiday" class="mascot-image">
                 </div>
             </div>
