Adjust image sizes and highlight box positioning
- Reduce br-rabbit-camera.png to 60-70% size (260px max-width)
- Move highlight box in Why Better Photos Matter to centered row below grid
- Reduce br-rabbit-laptop.png to 60-70% size
- Reduce br-rabbit-money.png to 60-70% size
- Add line break after 'property' in Real Transformations highlight box
- Ensure all highlight boxes are centered and width fits content only
- Section title 'Why Better Photos Matter' already centered across full section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h2 class="section-title">Why Better Photos Matter</h2>
             <div class="section-grid">
                 <div class="section-image">
-                    <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image">
+                    <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image mascot-small">
                 </div>
                 <div class="section-content">
                     <div class="content-block">
@@ -89,10 +89,10 @@
                     </div>
                     <h3 class="subheading">What Poor Photos Cost You</h3>
                     <p>Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
-                    <div class="highlight-box">
-                        <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
-                    </div>
                 </div>
+            </div>
+            <div class="highlight-box">
+                <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
             </div>
         </div>
     </section>
@@ -136,7 +136,7 @@
                     <p>Used consistently across your listing, this creates a cleaner, premium brand that guests trust.</p>
                 </div>
                 <div class="section-image">
-                    <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image">
+                    <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image mascot-small">
                 </div>
             </div>
         </div>
@@ -185,7 +185,7 @@
             <h2 class="section-title">Your ROI</h2>
             <div class="section-grid">
                 <div class="section-image">
-                    <img src="images/br-rabbit-money.png" alt="Blue Rabbit Money" class="mascot-image">
+                    <img src="images/br-rabbit-money.png" alt="Blue Rabbit Money" class="mascot-image mascot-small">
                 </div>
                 <div class="section-content">
                     <p>Professional images are not an expense. They are an asset. Better photos increase your visibility, raise your nightly rate, and help convert more browsers into confirmed bookings. If your nightly rate is around £120, even one extra weekend booked per month can more than cover the full cost of the Standard Package. The Premium Package often pays for itself even faster, especially for larger properties or high demand locations.</p>
