Add line break in Real Transformations highlight box after 'property'

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="highlight-box">
-                <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
+                <p>This is the first impression guests will have of your property.<br>Brighter, cleaner images help guests imagine themselves staying there.</p>
             </div>
         </div>
     </section>
