Adjust Why Better Photos Matter section spacing and highlight box
- Reduce padding on right text column to bring text closer to rabbit image
- Right-align rabbit image (flush to right edge of column)
- Update highlight box: inline-block style, centered horizontally, centered text
- Add line break after 'property,' with comma in highlight box text

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <div class="container">
             <h2 class="section-title">Why Better Photos Matter</h2>
             <div class="section-grid">
-                <div class="section-image">
+                <div class="section-image image-right">
                     <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image mascot-small">
                 </div>
-                <div class="section-content">
+                <div class="section-content content-tight">
                     <div class="content-block">
                         <h3>Visibility</h3>
                         <p>Listings with bright, high quality images attract more clicks because they stand out instantly in crowded search results.</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="highlight-box">
-                <p>This is the first impression guests will have of your property. Brighter, cleaner images help guests imagine themselves staying there.</p>
+                <p>This is the first impression guests will have of your property,<br>brighter, cleaner images help guests imagine themselves staying there.</p>
             </div>
         </div>
     </section>
