Manual adjustments: increase mascot size to 360px, reduce content block spacing to 0rem, fix subheading class to content-block

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h3>Booking Rate</h3>
                         <p>Better photos convert more browsers into guests. Small visual improvements can increase booking rates by 20 to 40 percent.</p>
                     </div>
-                    <h3 class="subheading">What Poor Photos Cost You</h3>
+                    <h3 class="content-block">What Poor Photos Cost You</h3>
                     <p>Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
                 </div>
             </div>
