Fix blank page issue and image alignment - checkpoint before layout restructure

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#upload" class="cta-button">Get a Free Sample Upgrade</a>
                     <p class="hero-reassurance">Show us one photo and we will upgrade it for free so you can see the difference before committing.</p>
                 </div>
-                <div class="section-image">
+                <div class="section-image image-left">
                     <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit Mascot" class="hero-mascot-desktop">
                     <img src="images/br-rabbit-mobile.png" alt="Blue Rabbit Mascot" class="hero-mascot-mobile">
                 </div>
@@ -72,7 +72,7 @@
             <h2 class="section-title">Why Better Photos Matter</h2>
             <div class="section-grid">
                 <div class="section-image image-right">
-                    <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image mascot-small">
+                    <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image mascot-size1">
                 </div>
                 <div class="section-content content-tight">
                     <div class="content-block">
@@ -80,16 +80,18 @@
                         <p>Listings with bright, high quality images attract more clicks because they stand out instantly in crowded search results.</p>
                     </div>
                     <div class="content-block">
-                        <h3>Trust</h3>
+                        <h3>Trusts</h3>
                         <p>Cleaner lighting, accurate colour, and the removal of distractions make your space feel more polished and reliable, increasing guest confidence from the first glance.</p>
                     </div>
                     <div class="content-block">
                         <h3>Booking Rate</h3>
                         <p>Better photos convert more browsers into guests. Small visual improvements can increase booking rates by 20 to 40 percent.</p>
                     </div>
-                    <h3 class="content-block">What Poor Photos Cost You</h3>
-                    <p>Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
-                </div>
+                    <div class="content-block">
+                        <h3>What Poor Photos Cost You</h3>
+                        <p>Dark or unbalanced images make rooms feel smaller and less inviting, while warm lighting and visible clutter reduce guest confidence. The result is simple: more people scroll past your listing, and every scroll past is lost potential revenue. When guests feel confident and excited about your space, they book faster and your calendar fills sooner.</p>
+                    </div>               
+                 </div>
             </div>
             <div class="highlight-box">
                 <p>This is the first impression guests will have of your property,<br>brighter, cleaner images help guests imagine themselves staying there.</p>
@@ -135,8 +137,8 @@
                     <p>We then enhance detail, clarity, and depth to create images that feel brighter, warmer, larger, and more inviting, without altering the reality of your property. This is not a simple filter. It is a multi step professional enhancement workflow designed to make every room look its best and help your listing perform at its highest potential.</p>
                     <p>Used consistently across your listing, this creates a cleaner, premium brand that guests trust.</p>
                 </div>
-                <div class="section-image">
-                    <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image mascot-small">
+                <div class="section-image image-left">
+                    <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image mascot-size2">
                 </div>
             </div>
         </div>
@@ -184,8 +186,8 @@
         <div class="container">
             <h2 class="section-title">Your ROI</h2>
             <div class="section-grid">
-                <div class="section-image">
-                    <img src="images/br-rabbit-money.png" alt="Blue Rabbit Money" class="mascot-image mascot-small">
+                <div class="section-image image-right">
+                    <img src="images/br-rabbit-money.png" alt="Blue Rabbit Money" class="mascot-image mascot-size3">
                 </div>
                 <div class="section-content">
                     <p>Professional images are not an expense. They are an asset. Better photos increase your visibility, raise your nightly rate, and help convert more browsers into confirmed bookings. If your nightly rate is around £120, even one extra weekend booked per month can more than cover the full cost of the Standard Package. The Premium Package often pays for itself even faster, especially for larger properties or high demand locations.</p>
@@ -249,8 +251,8 @@
                         <p>Your next guest could choose your listing tomorrow once they see your improved photos.</p>
                     </div>
                 </div>
-                <div class="section-image">
-                    <img src="images/br-rabbit-holiday.png" alt="Blue Rabbit Holiday" class="mascot-image">
+                <div class="section-image image-left">
+                    <img src="images/br-rabbit-holiday.png" alt="Blue Rabbit Holiday" class="mascot-image mascot-size4">
                 </div>
             </div>
         </div>
