Update images and layout: restructure sections with proper column widths, add wider container for transformations, replace SVG arrows with arrow.png image

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <!-- Hero Section -->
     <section class="hero section">
         <div class="container">
-            <div class="section-grid">
+            <div class="section-grid text-left-image-right">
                 <div class="section-content">
                     <h1>Upgrade Your Listing. Increase Your Bookings.</h1>
                     <p class="hero-text">Most holiday rentals underperform because their photos do not create enough trust or desire. We professionally enhance your existing images so your property looks bright, clean, inviting, and high quality without needing new photography.</p>
                     <a href="#upload" class="cta-button">Get a Free Sample Upgrade</a>
                     <p class="hero-reassurance">Show us one photo and we will upgrade it for free so you can see the difference before committing.</p>
                 </div>
-                <div class="section-image image-left">
+                <div class="section-image">
                     <img src="images/br-rabbit-desktop.png" alt="Blue Rabbit Mascot" class="hero-mascot-desktop">
                     <img src="images/br-rabbit-mobile.png" alt="Blue Rabbit Mascot" class="hero-mascot-mobile">
                 </div>
@@ -70,8 +70,8 @@
     <section id="why-photos-matter" class="section">
         <div class="container">
             <h2 class="section-title">Why Better Photos Matter</h2>
-            <div class="section-grid">
-                <div class="section-image image-right">
+            <div class="section-grid image-left-text-right">
+                <div class="section-image">
                     <img src="images/br-rabbit-camera.png" alt="Blue Rabbit with Camera" class="mascot-image mascot-size1">
                 </div>
                 <div class="section-content content-tight">
@@ -131,13 +131,13 @@
     <section id="what-we-do" class="section">
         <div class="container">
             <h2 class="section-title">How We Upgrade Your Photos</h2>
-            <div class="section-grid">
+            <div class="section-grid text-left-image-right">
                 <div class="section-content">
                     <p>Most holiday rental photos suffer from flat lighting, colour imbalance, shadows, dull skies, and distracting elements that make rooms feel smaller or dated. Our process corrects all of these issues with precise lighting adjustments, colour balancing, window light correction, and careful removal of anything that pulls attention away from the space.</p>
                     <p>We then enhance detail, clarity, and depth to create images that feel brighter, warmer, larger, and more inviting, without altering the reality of your property. This is not a simple filter. It is a multi step professional enhancement workflow designed to make every room look its best and help your listing perform at its highest potential.</p>
                     <p>Used consistently across your listing, this creates a cleaner, premium brand that guests trust.</p>
                 </div>
-                <div class="section-image image-left">
+                <div class="section-image">
                     <img src="images/br-rabbit-laptop.png" alt="Blue Rabbit with Laptop" class="mascot-image mascot-size2">
                 </div>
             </div>
@@ -149,11 +149,13 @@
         <div class="container">
             <h2 class="section-title">Real Transformations</h2>
             <p class="section-intro">Guests make booking decisions in seconds. These real examples show how much difference professional photo enhancement can make: brighter rooms, clearer details, and a cleaner, more inviting atmosphere that improves first impressions.</p>
+        </div>
+        <div class="container-wide">
             <div class="transformations-list">
                 <div class="transformation-item">
                     <div class="before-after-row">
                         <div class="image-placeholder before">Before</div>
-                        <div class="arrow">→</div>
+                        <img src="images/arrow.png" alt="" class="transform-arrow" />
                         <div class="image-placeholder after">After</div>
                     </div>
                     <p class="caption">The original image was dark and unevenly lit. The enhanced version brightens the space, corrects colour, and removes distractions, making it feel cleaner and larger.</p>
@@ -161,7 +163,7 @@
                 <div class="transformation-item">
                     <div class="before-after-row">
                         <div class="image-placeholder before">Before</div>
-                        <div class="arrow">→</div>
+                        <img src="images/arrow.png" alt="" class="transform-arrow" />
                         <div class="image-placeholder after">After</div>
                     </div>
                     <p class="caption">Warm lighting made the room look dated. After enhancement the colours feel natural and welcoming, with reduced shadows and balanced tones.</p>
@@ -169,12 +171,14 @@
                 <div class="transformation-item">
                     <div class="before-after-row">
                         <div class="image-placeholder before">Before</div>
-                        <div class="arrow">→</div>
+                        <img src="images/arrow.png" alt="" class="transform-arrow" />
                         <div class="image-placeholder after">After</div>
                     </div>
                     <p class="caption">Clutter and harsh shadows reduced guest confidence. The upgraded version improves clarity, softens lighting, and creates a more premium presentation.</p>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="highlight-box">
                 <p>This is the first impression guests will have of your property.<br>Brighter, cleaner images help guests imagine themselves staying there.</p>
             </div>
@@ -185,8 +189,8 @@
     <section id="roi" class="section">
         <div class="container">
             <h2 class="section-title">Your ROI</h2>
-            <div class="section-grid">
-                <div class="section-image image-right">
+            <div class="section-grid image-left-text-right">
+                <div class="section-image">
                     <img src="images/br-rabbit-money.png" alt="Blue Rabbit Money" class="mascot-image mascot-size3">
                 </div>
                 <div class="section-content">
@@ -242,7 +246,7 @@
     <section id="upload" class="section cta-section">
         <div class="container">
             <h2 class="section-title">Ready to See the Difference?</h2>
-            <div class="section-grid">
+            <div class="section-grid text-left-image-right">
                 <div class="section-content">
                     <p>Better photos lead to more clicks, more bookings, and higher income, often within days of refreshing your listing. Many hosts see stronger occupancy and more reliable revenue simply by upgrading the images they already have. Your property may be performing well now, but with professional photo enhancement it can perform even better.</p>
                     <p>Send us one photo and we will upgrade it completely free so you can see the difference for yourself before committing.</p>
@@ -251,7 +255,7 @@
                         <p>Your next guest could choose your listing tomorrow once they see your improved photos.</p>
                     </div>
                 </div>
-                <div class="section-image image-left">
+                <div class="section-image">
                     <img src="images/br-rabbit-holiday.png" alt="Blue Rabbit Holiday" class="mascot-image mascot-size4">
                 </div>
             </div>
